<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
   >

            <LinearLayout
                android:id="@+id/ll_container_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_email"
                    style="@style/EditTextFormField"
                    android:background="@drawable/bg_form_field_top"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/hint_email"/>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/EditTextFormField"
                    android:layout_marginTop="-1dp"
                    android:background="@drawable/bg_form_field_bottom"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_password"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/TextViewLink"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_my_password"
                app:layout_constraintLeft_toLeftOf="@+id/ll_container_fields"
                app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
                android:onClick="callForgotPasswordActivity"/>

            <Button
                android:id="@+id/bt_login"
                style="@style/ButtonForm"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_container_fields"
                app:layout_constraintRight_toRightOf="@+id/ll_container_fields"
                android:onClick="mainAction"
                android:text="@string/sign_in"/>

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/or"
                android:textColor="@color/colorText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_login" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/TextViewLink"
                android:text="@string/sign_up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_or"
                android:onClick="callSignUpActivity"/>

            <include layout="@layout/text_view_privacy_policy_login"/>

</androidx.constraintlayout.widget.ConstraintLayout >